--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;500;600&display=swap');
 
 :root{
-   --purple:#8e44ad;
+   --blue:#007bff;
    --red:#c0392b;
    --orange:#f39c12;
-   --black:#333;
+   --black:#2d3234;
    --white:#fff;
    --light-color:#666;
    --light-white:#ccc;
@@ -23,7 +23,7 @@
 }
 
 *::selection{
-   background-color: var(--purple);
+   background-color: var(--blue);
    color:var(--white);
 }
 
@@ -37,7 +37,7 @@
 }
 
 *::-webkit-scrollbar-thumb{
-   background-color: var(--purple);
+   background-color: var(--blue);
 }
 
 html{
@@ -117,7 +117,7 @@ section{
 
 .white-btn,
 .btn{
-   background-color: var(--purple);
+   background-color: var(--blue);
 }
 
 .option-btn{
@@ -158,7 +158,7 @@ section{
 }
 
 .heading p a{
-   color:var(--purple);
+   color:var(--blue);
 }
 
 .heading p a:hover{
@@ -216,7 +216,7 @@ section{
 }
 
 .form-container form p a{
-   color:var(--purple);
+   color:var(--blue);
 }
 
 .form-container form p a:hover{
@@ -264,16 +264,16 @@ section{
 }
 
 .header .header-1 .flex .share a:hover{
-   color:var(--purple);
+   color:var(--blue);
 }
 
 .header .header-1 .flex p{
    font-size: 2rem;
-   color:var(--light-color);
+   color:var(--black);
 }
 
 .header .header-1 .flex p a{
-   color:var(--purple);
+   color:var(--blue);
 }
 
 .header .header-1 .flex p a:hover{
@@ -282,7 +282,7 @@ section{
 
 .header .header-2 .flex .logo{
    font-size: 2.5rem;
-   color:var(--purple);
+   color:var(--blue);
 }
 
 .header .header-2 .flex .navbar a{
@@ -292,7 +292,7 @@ section{
 }
 
 .header .header-2 .flex .navbar a:hover{
-   color:var(--purple);
+   color:var(--blue);
    text-decoration: underline;
 }
 
@@ -304,7 +304,7 @@ section{
 }
 
 .header .header-2 .flex .icons > *:hover{
-   color:var(--purple);
+   color:var(--blue);
 }
 
 #menu-btn{
@@ -336,7 +336,7 @@ section{
 }
 
 .header .header-2 .flex .user-box p span{
-   color:var(--purple);
+   color:var(--blue);
 }
 
 .header .header-2 .flex .user-box .delete-btn{
@@ -417,7 +417,7 @@ section{
    padding:1rem;
    font-size: 2.5rem;
    color:var(--white);
-   background-color: var(--red);
+   background-color: var(--blue);
 }
 
 .about .flex{
@@ -836,7 +836,7 @@ section{
 }
 
 .placed-orders .box-container .box p span{
-   color:var(--purple);
+   color:var(--blue);
 }
 
 .search-form form{
@@ -898,12 +898,12 @@ section{
 
 .footer .box-container .box p i,
 .footer .box-container .box a i{
-   color:var(--purple);
+   color:var(--blue);
    padding-right: .5rem;
 }
 
 .footer .box-container .box a:hover{
-   color:var(--purple);
+   color:var(--blue);
    text-decoration: underline;
 }
 
@@ -917,7 +917,7 @@ section{
 }
 
 .footer .credit span{
-   color:var(--purple);
+   color:var(--blue);
 }
 
 
